product show page

--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -70,7 +70,7 @@
       <img class="card-img-top" src="/images/product.png" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title"><a href="/product/{{product.id}}">{{product.name}}</a></h5>
-        <h5>${{product.price}}</h5>
+        <h5>${{product.price}}.00</h5>
         <h6>{{product.Category.name}}</h6>
         <a href="/addtocart/{{product.id}}" class="btn btn-primary">Add to Cart</a>
       </div>
