--- a/views/products/show.handlebars
+++ b/views/products/show.handlebars
@@ -9,7 +9,11 @@
     <h3>${{product.price}}.00</h3>
   </div>
   <div class="col-sm-4">
-    {{product.description}}
+    {{product.description}}<br>
+    <form class="" action="/cart" method="post">
+      <input type="hidden" name="id" value="{{product.id}}">
+      <input type="submit" name="" value="Add to Cart" class="btn btn-xs btn-primary pull-right">
+    </form>
   </div>
 </div>
 <hr>
@@ -23,7 +27,10 @@
         <h5 class="card-title"><a href="/product/{{product.id}}">{{product.name}}</a></h5>
         <h5>${{product.price}}</h5>
         <h6>{{product.Category.name}}</h6>
-        <a href="/addtocart/{{product.id}}" class="btn btn-primary">Add to Cart</a>
+        <form class="" action="/cart" method="post">
+          <input type="hidden" name="id" value="{{product.id}}">
+          <input type="submit" name="" value="Add to Cart" class="btn btn-xs btn-primary pull-right">
+        </form>
       </div>
     </div>
   </div>
