--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -9,7 +9,7 @@
         <a class="nav-link" href="/">Products Index <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/myprofile">My Profile</a>
+        <a class="nav-link" href="/mycart">My Cart</a>
       </li>
     </ul>
   </div>
