--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -65,7 +65,7 @@
 
 <div class="row">
   {{#each products as |product|}}
-  <div class="col-sm-3">
+  <div class="col-md-3">
     <div class="card">
       <img class="card-img-top" src="/images/product.png" alt="Card image cap">
       <div class="card-body">
