--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -8,9 +8,17 @@
       <li class="nav-item active">
         <a class="nav-link" href="/">Products Index <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/mycart">My Cart</a>
-      </li>
+      <li class="nav-item dropdown">
+       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+         Cart - ( {{cart.quantity}} )
+       </a>
+       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+         <a class="dropdown-item" href="/mycart">My Cart</a>
+         {{#each cart as |item|}}
+          <a class="dropdown-item" href="#">{{item.quantity}} - {{item.name}}</a>
+         {{/each}}
+       </div>
+     </li>
     </ul>
   </div>
 </nav>
