--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -8,6 +8,9 @@
       <li class="nav-item active">
         <a class="nav-link" href="/">Products Index <span class="sr-only">(current)</span></a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/admin">Admin <span class="sr-only">(current)</span></a>
+      </li>
       <li class="nav-item dropdown">
        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
          Cart - ( {{cart.quantity}} )
