display all products done

--- a/views/layouts/application.handlebars
+++ b/views/layouts/application.handlebars
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>
-      Mimir's market
+      Mimir's Market
     </title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+
+    <!-- Font Awesome -->
+    <script src="https://use.fontawesome.com/756a4b0718.js"></script>
+
+    <link href="https://fonts.googleapis.com/css?family=Italianno" rel="stylesheet">
 
   </head>
   <body>
@@ -21,7 +26,7 @@
 
     <hr>
     <footer class="foot" style="text-align: center;">
-      © Maddie Rajavasireddy
+      <i class="fa fa-copyright" aria-hidden="true"></i><i> Maddie Rajavasireddy</i>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
