--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -1,21 +1,24 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
-  <a class="navbar-brand" href="/"><h1>MM</h1></a>
+  <a class="navbar-brand" href="/" style="font-family: Italianno, cursive; font-size: 50px"><b>Mimir's Market</b></a>
   
   <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Search <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#"><i class="fa fa-search fa-2x" aria-hidden="true"></i><span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-         Cart
+         <i class="fa fa-shopping-cart fa-2x" aria-hidden="true"></i>
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">My Cart</a>
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Analytics <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#"><i class="fa fa-tachometer fa-2x" aria-hidden="true"></i><span class="sr-only">(current)</span></a>
+      </li>
+       <li class="nav-item">
+        <a class="nav-link" href="#"><i class="fa fa-calculator fa-2x" aria-hidden="true"></i><span class="sr-only">(current)</span></a>
       </li>
     </ul>
   </div>
