user can add items to shopping cart

--- a/views/partials/_productPreview.hbs
+++ b/views/partials/_productPreview.hbs
@@ -5,5 +5,5 @@
   <p>${{displayPrice this.price}}</p>
   <p><a href="/products/{{this.id}}">{{this.name}}</a></p>
   <p>{{this.category.name}}</p>
-  <button class="btn btn-primary">Add to Cart</button>
+  <a class="btn btn-primary add-to-cart" id="{{this.id}}">Add to Cart</a>
 </div>
