--- a/public/style.css
+++ b/public/style.css
@@ -28,6 +28,13 @@
   font-size: 2em !important;
 }
 
+#cart-item-count {
+  font-size: 16px;
+  position: relative;
+  top: -15px;
+  left: -3px;
+}
+
 .clear {
   clear: both;
 }
