--- a/views/layouts/application.hbs
+++ b/views/layouts/application.hbs
@@ -18,10 +18,14 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </head>
   <body>
-    {{> shared/_nav }}
+    <div id="mainNav">
+      {{> shared/_nav }}
+    </div>
     <main class="container">
       {{> shared/_flash }}
       {{{ body }}}
     </main>
+    <script src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="/socket.js"></script>
   </body>
 </html>
