--- a/views/products/show.hbs
+++ b/views/products/show.hbs
@@ -10,7 +10,7 @@
   </div>
   <div id="featureProductDesc">
     <p>{{product.description}}</p>
-    <button class="btn btn-primary">Add to Cart</button>
+    <a class="btn btn-primary add-to-cart" id="{{product.id}}">Add to Cart</a>
   </div>
 </section>
 <h3 class="text-center" id="products-heading">Related Products</h3>
