--- a/views/shared/_nav.hbs
+++ b/views/shared/_nav.hbs
@@ -5,12 +5,19 @@
       <ul class="nav navbar-nav navbar-right pull-right">
         <li><a href="/products"><i class="fa fa-search" aria-hidden="true"></i></a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
+            <span id="cart-item-count">{{cartItemsCount cart}}</span>
+          </a>
           <ul class="dropdown-menu">
-            <li><a href="#">Item 1</a></li>
-            <li><a href="#">Item 2</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Checkout</a></li>
+            {{#if (cartItemsCount cart)}}
+              {{#each cart}}
+                <li><a href="/products/{{@key}}">({{this.quantity}}) {{this.name}}</a></li>
+              {{/each}}
+              <li class="divider"></li>
+              <li><a href="/checkout">Checkout</a></li>
+            {{else}}
+              <li class="text-center">No Items Yet</li>
+            {{/if}}
           </ul>
         </li>
       </ul>
