--- a/views/shared/_nav.hbs
+++ b/views/shared/_nav.hbs
@@ -14,7 +14,7 @@
                 <li><a href="/products/{{@key}}">({{this.quantity}}) {{this.name}}</a></li>
               {{/each}}
               <li class="divider"></li>
-              <li><a href="/checkout">Checkout</a></li>
+              <li><a href="/checkout/cart">Checkout</a></li>
             {{else}}
               <li class="text-center">No Items Yet</li>
             {{/if}}
