--- a/views/products/index.hbs
+++ b/views/products/index.hbs
@@ -1,4 +1,5 @@
-<h1 class="text-center" id="products-heading">Products</h1>
+<h2 class="text-center">Products</h2>
+<hr>
 <div>
   <form action="#" method="GET" class="form">
     <div class="col-sm-offset-2 col-sm-6 form-group ">
