--- a/views/checkout/index.hbs
+++ b/views/checkout/index.hbs
@@ -1,6 +1,17 @@
 <h2 class="text-center">Checkout</h2>
 {{#if (cartItemsCount cart)}}
-  <form class="form form-horizontal" action="#">
+  <form class="form form-horizontal" action="/checkout" method="POST">
+    <div class="hidden">
+      <script
+        src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+        data-key="{{ STRIPE_PK }}"
+        data-amount="{{convertToCents totalPrice}}"
+        data-name="Mimir's Market Checkout"
+        data-description="Widget"
+        data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+        data-locale="auto"></script>
+      </div>
+    <input type="hidden" name="amount" value="{{convertToCents totalPrice}}">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -11,21 +22,14 @@
               <div class="form-group row">
                 <label for="fname" class="col-sm-3 col-form-label">Frist Name</label>
                 <div class="col-sm-9">
-                  <input class="form-control" type="text" name="fname">
+                  <input class="form-control" type="text" name="fname" required>
                 </div>
               </div>
 
               <div class="form-group row">
                 <label for="lname" class="col-sm-3 col-form-label">Last Name</label>
                 <div class="col-sm-9">
-                  <input class="form-control" type="text" name="lname">
-                </div>
-              </div>
-
-              <div class="form-group row">
-                <label for="email" class="col-sm-3 col-form-label">Email</label>
-                <div class="col-sm-9">
-                  <input class="form-control" type="email" name="email">
+                  <input class="form-control" type="text" name="lname" required>
                 </div>
               </div>
 
@@ -34,20 +38,20 @@
               <div class="form-group row">
                 <label for="street" class="col-sm-3 col-form-label">Street</label>
                 <div class="col-sm-9">
-                  <input class="form-control" type="text" name="street">
+                  <input class="form-control" type="text" name="street" required>
                 </div>
               </div>
 
               <div class="form-group row">
                 <label for="city" class="col-sm-3 col-form-label">City</label>
                 <div class="col-sm-9">
-                  <input class="form-control" type="text" name="city">
+                  <input class="form-control" type="text" name="city" required>
                 </div>
               </div>
 
               <div class="form-group row">
                 <div class="col-sm-4 col-sm-offset-3">
-                  <select class="form-control">
+                  <select class="form-control" name="state" required>
                     <option disabled="true" selected>State</option>
                     <option value="AL">Alabama</option>
                     <option value="AK">Alaska</option>
@@ -107,7 +111,7 @@
               <div class="form-group row">
                 <label for="zip" class="col-sm-3 col-form-label">Zip Code</label>
                 <div class="col-sm-4">
-                  <input class="form-control" type="number" name="zip">
+                  <input class="form-control" type="number" name="zip" required>
                 </div>
               </div>
            </div>
