--- a/public/style.css
+++ b/public/style.css
@@ -25,6 +25,21 @@
 .navbar-nav .fa-search {
   font-size: 24px;
   position: relative;
+  top: 2px;
+}
+
+.navbar-nav .fa-tachometer {
+  font-size: 28px;
+}
+
+.navbar-nav .fa-calculator {
+  font-size: 22px;
+  position: relative;
+  top: 4px;
+}
+
+.navbar-nav .fa-shopping-cart {
+  position: relative;
   top: 1px;
 }
 
