--- a/views/shared/_nav.hbs
+++ b/views/shared/_nav.hbs
@@ -20,6 +20,8 @@
             {{/if}}
           </ul>
         </li>
+        <li><a href="/admin/orders"><i class="fa fa-tachometer" aria-hidden="true"></i></a></li>
+        <li><a href="/admin/analytics"><i class="fa fa-calculator" aria-hidden="true"></i></a></li>
       </ul>
     </div>
   </div>
