--- a/views/admin/analytics/index.hbs
+++ b/views/admin/analytics/index.hbs
@@ -15,23 +15,19 @@
           </tr>
           <tr>
             <th>Total Transactions</th>
-            <td>0</td>
-          </tr>
-          <tr>
-            <th>Total Customers</th>
-            <td>0</td>
+            <td>{{analytics.totalTransactions}}</td>
           </tr>
           <tr>
             <th>Total Products</th>
-            <td>0</td>
+            <td>{{analytics.totalProducts}}</td>
           </tr>
           <tr>
             <th>Total Categories</th>
-            <td>0</td>
+            <td>{{analytics.totalCategories}}</td>
           </tr>
           <tr>
             <th>States Sold To</th>
-            <td>0</td>
+            <td>{{length analytics.stateRevenues}}</td>
           </tr>
         </tbody>
       </table>
@@ -41,10 +37,10 @@
     <div class="col-sm-12">
       <table class="table table-striped table-bordered">
         <tbody>
-          {{#each productRevenues as |product|}}
+          {{#each analytics.productRevenue}}
             <tr>
-              <th>{{product.name}}</th>
-              <td>{{product.revenue}}</td>
+              <th>{{@key}}</th>
+              <td>${{displayPrice (convertToDollars this.revenue)}}</td>
             </tr>
           {{/each}}
         </tbody>
@@ -57,10 +53,10 @@
     <div class="col-sm-12">
       <table class="table table-striped table-bordered">
         <tbody>
-          {{#each stateRevenues as |state|}}
+          {{#each analytics.stateRevenues}}
             <tr>
-              <th>{{state.name}}</th>
-              <td>{{state.revenue}}</td>
+              <th>{{this._id}}</th>
+              <td>${{displayPrice (convertToDollars this.total)}}</td>
             </tr>
           {{/each}}
         </tbody>
@@ -71,10 +67,10 @@
     <div class="col-sm-12">
       <table class="table table-striped table-bordered">
         <tbody>
-          {{#each categoryRevenues as |category|}}
+          {{#each analytics.categoryRevenue}}
             <tr>
-              <th>{{category.name}}</th>
-              <td>{{category.revenue}}</td>
+              <th>{{@key}}</th>
+              <td>${{displayPrice (convertToDollars this.revenue)}}</td>
             </tr>
           {{/each}}
         </tbody>
