--- a/views/layouts/application.handlebars
+++ b/views/layouts/application.handlebars
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>
-      Mimir's Market
+      Maddie's Market
     </title>
 
     <!-- Bootstrap CSS -->
