--- a/views/checkout/cart.hbs
+++ b/views/checkout/cart.hbs
@@ -6,7 +6,7 @@
         <img src="{{product.img}}" class="pull-left" />
       </div>
       <div class="col-sm-3 cartProductInfo">
-        <p><b>{{product.name}}</b></p>
+        <p><span class="product-name">{{product.name}}</span></p>
         <p>{{product.category.name}}</p>
         <p>${{displayPrice product.price}}</p>
       </div>
@@ -16,9 +16,10 @@
           <input type="number" name="quantity" class="form-control" id="{{product.id}}">
         </div>
         <div class="col-sm-3">
-          <button type="submit" class="btn btn-success cart-btn">Set Quantity</button>
-          <br>
-          <a href="/checkout/{{product.id}}?_method=delete" class="btn btn-danger pull right cart-btn">Remove</a>
+          <div>
+            <button type="submit" class="btn btn-success cart-btn">Set Quantity</button>
+          </div>
+          <a href="/checkout/{{product.id}}?_method=delete" class="btn btn-danger cart-btn">Remove</a>
         </div>
       </form>
     </section>
