--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -17,7 +17,7 @@
             <a class="dropdown-item" href="#">({{item.quantity}}) {{item.name}}</a>
           {{/each}}
           <hr>
-          <a class="dropdown-item" href="#">Checkout</a>
+          <a class="dropdown-item" href="/checkout">Checkout</a>
         </div>
       </li>
       <li class="nav-item">
