--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -21,7 +21,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#"><i class="fa fa-tachometer fa-2x" aria-hidden="true"></i><span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/admin"><i class="fa fa-tachometer fa-2x" aria-hidden="true"></i><span class="sr-only">(current)</span></a>
       </li>
        <li class="nav-item">
         <a class="nav-link" href="#"><i class="fa fa-calculator fa-2x" aria-hidden="true"></i><span class="sr-only">(current)</span></a>
