--- a/views/cart/index.handlebars
+++ b/views/cart/index.handlebars
@@ -15,19 +15,28 @@
 				  <span><b>Category:&nbsp;</b>{{product.Category.name}}</span><br><br>
 				  <span><b>Price:&nbsp;</b>${{product.price}}</span>
 				</div>
-				<form class="col-sm-5" action="/mycart/update/{{product.id}}" method="post" style="font-size:14px;">
-					<div class="row">
-						<div class="col-sm-6">
-							<input style="height:40px; margin:30px 10px" type="text" value="{{product.quantity}}" name="quantity"/>
+				<div class="col-sm-5">
+					<form action="/mycart/update/{{product.id}}" method="post" style="font-size:14px;">
+						<div class="row">
+							<div class="col-sm-6">
+								<input style="height:40px; margin:30px 10px; padding:10px" type="text" value="{{product.quantity}}" name="quantity"/>
+							</div>
+							<div class="col-sm-6">
+				        <button type="submit" class="btn btn-success" style="margin:30px 10px; width:150px">Set Quantity</button>
+							</div>
 						</div>
-						<div class="col-sm-6">
-			        <button type="submit" class="btn btn-success" style="margin:30px 10px; width:150px">Set Quantity</button><br>
-							<a href="/mycart/delete/{{product.id}}">
-						 		<button class="btn btn-danger" style="margin:0px 10px; width:150px">Remove</button>
-						 	</a>
+					</form>
+					<form action="/mycart/delete/{{product.id}}" method="get" style="font-size:14px;">
+						<div class="row">
+							<div class="col-sm-6">
+								
+							</div>
+							<div class="col-sm-6">
+				        <button type="submit" class="btn btn-danger" style="margin:0px 10px; width:150px">Remove</button>
+							</div>
 						</div>
-					</div>
-				</form>
+					</form>
+				</div>
 			</div>
 		{{/each}}
 
