--- a/views/product.hbs
+++ b/views/product.hbs
@@ -48,9 +48,32 @@
 	{{/each}}
 </select>
 <select name="price">
-	<option value="below5">Below 5</option>
-	<option value="above5">Above 5</option>
+	<option value="1">1</option>
+	<option value="2">2</option>
+	<option value="3">3</option>
+	<option value="4">4</option>
+	<option value="5">5</option>
+	<option value="6">6</option>
+	<option value="7">7</option>
+	<option value="8">8</option>
+	<option value="9">9</option>
+	<option value="10">10</option>
 </select>
+<select name="min_max">
+	<option value="min">min</option>
+	<option value="max">max</option>
+</select>
+<form  action = "/products/sort" method = "post">
+<select name="sort_by">
+	<option value="price">price</option>
+	<option value="name">name</option>
+</select>
+<select name="asc_desc">
+	<option value="ascending">ascending</option>
+	<option value="descending">descending</option>
+</select>
+<input type="submit" class="btn btn-primary">
+</form>
 <input type="submit" class="btn btn-primary">
 </form>
 <div class="container-fluid">
