--- a/views/products/show.handlebars
+++ b/views/products/show.handlebars
@@ -3,7 +3,7 @@
     </div>
   <div class="col-md-8">
     <h1>{{ product.name }}</h1>
-    <p>{{ product.price}}</p>
+    <h2>Price: ${{ product.price}}</h2>
   </div>
 </header>
 
@@ -16,7 +16,7 @@
     <h2>SKU</h2>
     <p>{{ product.sku }}</p>
 
-    <h2>Category</h2>
+    <h2>Category ID</h2>
     <p>{{ product.categoryId }}</p>
 
     <a href="#" class="btn btn-lg btn-primary">Buy Me!</a>
