--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -27,12 +27,12 @@ categoryId: DataTypes.INTEGER, -->
     {{/times}}
   </select>
 
-  {{!-- Body Type --}}
-  <h3>Body Type</h3>
-  {{#each bodyTypes as |bodyType| }}
+  {{!-- Product Type --}}
+  <h3>Product Type</h3>
+  {{#each productTypes as |bodyType| }}
     <div class="checkbox">
-      <label for="body_types_{{ bodyType }}">
-        <input type="checkbox" name="body_types[]" id="body_types_{{ bodyType }}" value="{{ bodyType }}" {{#if (lookup ../searchSettings.bodyTypes bodyType) }}checked{{/if }}> {{ bodyType }}
+      <label for="product_types_{{ bodyType }}">
+        <input type="checkbox" name="product_types[]" id="product_types_{{ bodyType }}" value="{{ bodyType }}" {{#if (lookup ../searchSettings.productTypes bodyType) }}checked{{/if }}> {{ bodyType }}
       </label>
     </div>
   {{/each }}
@@ -44,15 +44,14 @@ categoryId: DataTypes.INTEGER, -->
 </form>
 
 
-{{#if users.length }}
+{{#if products.length }}
   <div id="search-results" class="row">
-    {{#each users as |user| }}
+    {{#each products as |user| }}
       <div class="user col-xs-12 col-sm-6 col-md-4 text-center">
         <div class="thumbnail">
           <img src="{{ userImagePath user }}" alt="User image" class="img-responsive">
           <div class="caption">
-            <h3>{{ user.username }}</h3>
-            <p>{{ age user.Profile.birthday }} years old, from {{ user.Profile.city }}</p>
+            <h3>{{ product.name }}</h3>
             <p>
               <a href="#" class="btn btn-primary" role="button">Like</a>
               <a href="{{ userPath user.id }}" class="btn btn-default" role="button">View</a>
@@ -63,5 +62,5 @@ categoryId: DataTypes.INTEGER, -->
     {{/each }}
   </div>
 {{else }}
-  <p class="text-danger">No users</p>
+  <p class="text-danger">No products</p>
 {{/if }}
