--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -29,10 +29,10 @@ categoryId: DataTypes.INTEGER, -->
 
   {{!-- Product Type --}}
   <h3>Product Type</h3>
-  {{#each productTypes as |bodyType| }}
+  {{#each productTypes as |productType| }}
     <div class="checkbox">
-      <label for="product_types_{{ bodyType }}">
-        <input type="checkbox" name="product_types[]" id="product_types_{{ bodyType }}" value="{{ bodyType }}" {{#if (lookup ../searchSettings.productTypes bodyType) }}checked{{/if }}> {{ bodyType }}
+      <label for="product_types_{{ productType }}">
+        <input type="checkbox" name="product_types[]" id="product_types_{{ productType }}" value="{{ productType }}" {{#if (lookup ../searchSettings.productTypes productType) }}checked{{/if }}> {{ productType }}
       </label>
     </div>
   {{/each }}
@@ -46,15 +46,14 @@ categoryId: DataTypes.INTEGER, -->
 
 {{#if products.length }}
   <div id="search-results" class="row">
-    {{#each products as |user| }}
+    {{#each products as |product| }}
       <div class="user col-xs-12 col-sm-6 col-md-4 text-center">
         <div class="thumbnail">
-          <img src="{{ userImagePath user }}" alt="User image" class="img-responsive">
+          <img src="{{ productImagePath product }}" alt="User image" class="img-responsive">
           <div class="caption">
             <h3>{{ product.name }}</h3>
             <p>
-              <a href="#" class="btn btn-primary" role="button">Like</a>
-              <a href="{{ userPath user.id }}" class="btn btn-default" role="button">View</a>
+              <a href="{{ productPath product.id }}" class="btn btn-default" role="button">Details</a>
             </p>
           </div>
         </div>
