--- a/views/products/show.handlebars
+++ b/views/products/show.handlebars
@@ -17,8 +17,8 @@
     <p>{{ product.sku }}</p>
 
     <h2>Category ID</h2>
-    <p>{{ product.categoryId }}</p>
+    <p>{{ product.category.name }}</p>
 
-    <a href="#" class="btn btn-lg btn-primary">Buy Me!</a>
+    <a href="#" class="btn btn-lg btn-primary">Add Me to Shopping Cart!</a>
   </div>
 </div>
