working on search

--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -9,6 +9,8 @@ price: DataTypes.INTEGER,
 categoryId: DataTypes.INTEGER, -->
 
 
+
+
 <h2>Search</h2>
 <form action="/products">
   {{!-- Price--}}
@@ -24,6 +26,20 @@ categoryId: DataTypes.INTEGER, -->
       <option value="{{ prices }}" {{#if (eq searchSettings.price.max prices) }}selected{{/if }}>{{prices }}</option>
     {{/times}}
   </select>
+
+
+  <div class="dropdown">
+    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+      Category
+      <span class="caret"></span>
+    </button>
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+      {{#each categories as |category|}}
+      <li>{{category}}<</li>
+      {{/each}}
+    </ul>
+  </div>
+
 
   {{!-- Category Type --}}
   <h3>Category Type</h3>
