--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -25,6 +25,12 @@ categoryId: DataTypes.INTEGER, -->
     {{/times}}
   </select>
 
+  <h3>Categories</h3>
+  <select class="form-control" name="categories[submission]" id="category">
+    {{#each categories as |category| }}
+      <option value="{{ category.name }}" checked>{{category.name }}</option>
+    {{/each}}
+  </select>
 
   <div class="form-group">
     <input type="submit" class="btn btn-primary">
